--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,22 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.bitcount {
+  font-family: var(--font-bitcount), system-ui;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0,
+    "CRSV" 0.5,
+    "ELSH" 0,
+    "ELXP" 0;
+}
+
+.google-sans-code {
+  font-family: var(--font-google-sans-code), monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
